# Firestorm

./: .gitignore  Angelscript_Build.lua  Bullet_Build.lua  CMakeLists.txt  Doxyfile  GLFW_Build.lua  Game_Build.lua  GenerateProjects.bat  GenerateProjects.sh  GlobalConfig.lua  JsonCPP_Build.lua  LLGL_Build.lua  Options.lua  Platform.lua  README.md  RTTRBuild.lua  RTTR_Build.lua  UnitTestMainTemplate.lua  delete.bat  imgui_Build.lua  libApp_Build.lua  libCore_Build.lua  libExistence_Build.lua  libHarnessed_Build.lua  libIO_Build.lua  libJson_Build.lua  libMirror_Build.lua  libScript_Build.lua  libUI_Build.lua  physfs_Build.lua  precore.lua  premake5.lua
Source/: CMakeLists.txt  premake5.lua
Source/Applications/Elflord/: main.cpp  stdafx.h
Source/Applications/Firestorm/: FirestormApp.cpp  FirestormApp.h  FirestormMain.cpp  main.cpp  stdafx.h
Source/Applications/libFirestorm/: libFirestorm.cpp  libFirestorm.h  stdafx.cpp  stdafx.h
Source/Include/: libCore.h  libExistence.h  libHarnessed.h  libMirror.h
Source/Include/libCore/: Core.h
Source/Include/libExistence/: Engine.h
Source/Include/libHarnessed/: TestCase.h  TestHarness.h
Source/Include/libMirror/: Object.h
Source/Libraries/: premake5.lua
Source/Libraries/libApp/: Application.cpp  Application.h  FirestormMain.cpp  FirestormRun.cpp  InputEvents.cpp  InputEvents.h  ManagerMgr.cpp  ManagerMgr.h  ObjectMaker.cpp  ObjectMaker.h  Surface.h  Window.cpp  Window.h  libApp.cpp  libApp.h  stdafx.h
Source/Libraries/libCore/: ArgParser.cpp  ArgParser.h  Assert.cpp  Assert.h  Buffer.cpp  Buffer.h  Common.h  EventDispatcher.cpp  EventDispatcher.h  Expected.h  Hash.h  IRefCounted.cpp  IRefCounted.h  JsonSerializer.cpp  JsonSerializer.h  LibraryRegistrar.cpp  LibraryRegistrar.h  Logger.cpp  Logger.h  MapSOA.cpp  MapSOA.h  Memtraits.cpp  Memtraits.h  MirrorMacros.h  Object.cpp  Object.h  ObjectMaker.cpp  ObjectMaker.h  ObjectPool.cpp  ObjectPool.h  PtrControlBlock.cpp  PtrControlBlock.h  RefPtr.cpp  RefPtr.h  Result.cpp  Result.h  SOA.cpp  SOA.h  Serializer.cpp  Serializer.h  (+16 more)
Source/Libraries/libExistence/: Component.cpp  Component.h  ComponentDefinition.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  IComponent.h  Memtraits.h  ObjectPool.cpp  ObjectPool.h  System.cpp  System.h  Universe.cpp  Universe.h  libExistence.cpp  libExistence.h  libExistence.vcxproj.filters  premake5.lua  stdafx.h
Source/Libraries/libHarnessed/: Benchmark.cpp  Benchmark.h  TestCase.cpp  TestCase.h  TestHarness.cpp  TestHarness.h  libHarnessed.cpp  libHarnessed.h  libHarnessed.vcxproj.filters  premake5.lua  stdafx.h
Source/Libraries/libIO/: Document.cpp  Document.h  File.cpp  File.h  FileIOMgr.cpp  FileIOMgr.h  IDocument.cpp  (+30 more)
Source/Tests/: libCoreTests.cpp  libExistenceTests.cpp  libHarnessedTests.cpp  libIOTests.cpp  libMirrorTests.cpp  libScriptTests.cpp  main.cpp  premake5.lua  stdafx.h
Source/lib/: CMakeLists.txt
(+256 files in other folders)
