########################################################################################################################
#
#  ElflordPP/Source/CMakeLists.txt
#
#  This file is part of the Elflord Engine.
#
########################################################################################################################
#  Copyright (c) 2018 Miki Ryan
########################################################################################################################
add_subdirectory(lib)
